--- a/getallapk/app/build.gradle
+++ b/getallapk/app/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '27.0.0'
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.app.temp"
@@ -53,10 +53,10 @@ android {
                 def formattedDate = new Date().format('yyMMdd')
                 if (variant.buildType.name == "release") {
                     apkName += "_" + variant.productFlavors[0].name + "_" + formattedDate + "_" + variant.buildType.name + "_v" + android.defaultConfig.versionName + ".apk";
-                    outputFileName = new File(getRootDir().path + "/release", apkName)
+                    outputFileName = apkName
                 } else {
                     apkName += "_" + variant.productFlavors[0].name + "_" + formattedDate + "_" + variant.buildType.name + "_v" + android.defaultConfig.versionName + ".apk";
-                    outputFileName = new File((String) output.outputFile.parent, apkName)
+                    outputFileName = apkName
                 }
             }
         }
@@ -85,11 +85,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.1.1'
     compile 'com.googlecode.libphonenumber:libphonenumber:7.3.0'
-    compile 'com.android.support:design:27.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:cardview-v7:27.0.2'
+    compile 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
 
     /*ButterKnife*/
     compile 'com.jakewharton:butterknife:8.8.1'
@@ -100,7 +100,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 
     /*OkHttp*/
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.okio:okio:1.13.0'
 
     /*Gson*/
