--- a/getallapk/app/src/main/AndroidManifest.xml
+++ b/getallapk/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.app.temp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".MyApplication"
@@ -21,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".features.home.detail.RepoDetailActivity"></activity>
+        <activity android:name=".features.home.detail.RepoDetailActivity" />
     </application>
 
 </manifest>
