--- a/player_mp3/app/src/main/AndroidManifest.xml
+++ b/player_mp3/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 
     <application
         android:name=".MyApplication"
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -26,6 +25,12 @@
         <activity android:name=".features.home.detail.RepoDetailActivity" />
 
         <service android:name="com.app.temp.features.home.player_mp3.detail.BackgroundSoundService"/>
-    </application>
 
+        <receiver android:name="com.app.temp.features.home.player_mp3.detail.ActionBroadcastReceiver"  android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.INPUT_METHOD_CHANGED" />
+            </intent-filter>
+        </receiver>
+    </application>
 </manifest>
